<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Vlad Mihalachi
  ~
  ~ This file is part of Turbo Editor.
  ~
  ~ Turbo Editor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Turbo Editor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--Generated by crowdin.net-->
<resources>
    <string name="aggiungi_account">New account</string>
    <string name="attiva">Active</string>
    <string name="cancella">Delete</string>
    <string name="cancellazione">Deleting files&#8230;</string>
    <string name="caricamento">Loading&#8230;</string>
    <string name="cartella_locale_corrente">Current local folder</string>
    <string name="chiave_privata">Private Key</string>
    <string name="chiaro">Light</string>
    <string name="codifica">Encoding</string>
    <string name="condividi">Share</string>
    <string name="crea_cartella_locale">New local folder</string>
    <string name="crea_cartella_remota">New remote folder</string>
    <string name="crea_file_remoto">New remote file</string>
    <string name="new_local_file">New local file</string>
    <string name="disconneti">Disconnect</string>
    <string name="default_local_folder">Default local folder</string>
    <string name="dove_scaricare">Where to download?</string>
    <string name="download">Download</string>
    <string name="download_completato">Download completed</string>
    <string name="duplicate">Duplicate</string>
    <string name="fatto">Done</string>
    <string name="home">Home</string>
    <string name="host">Host</string>
    <string name="info">Info</string>
    <string name="locale">Local</string>
    <string name="log_in">Logging in&#8230;</string>
    <string name="modifica">Edit</string>
    <string name="muovi">Move</string>
    <string name="nascondi">Hide</string>
    <string name="nome_app">Turbo Client</string>
    <string name="nome_app_turbo_editor">Turbo Editor</string>
    <string name="nome_utente">Username</string>
    <string name="passiva">Passive</string>
    <string name="passphrase">Passphrase</string>
    <string name="password">Password</string>
    <string name="password_summary">Leave it empty to prompt for it every session</string>
    <string name="porta">Port</string>
    <string name="preferenze">Preferences</string>
    <string name="remoto">Remote</string>
    <string name="riavva_per_tema">To change the theme, restart the application</string>
    <string name="rinomina">Rename</string>
    <string name="root">Default remote folder</string>
    <string name="salva">Save</string>
    <string name="scuro">Dark</string>
    <string name="seleziona">Select</string>
    <string name="seleziona_account">Select an account</string>
    <string name="sicuro">Are you sure?</string>
    <string name="something_failed">Something failed</string>
    <string name="skip_same_file">Do not transfer same file</string>
    <string name="tema_app">App theme</string>
    <string name="tipo_connessione">Connection type</string>
    <string name="tipo_protocollo">Protocol type</string>
    <string name="un_altra_cartella">Another folder</string>
    <string name="use_passphrase">Use a passphrase</string>
    <string name="upload">Upload</string>
    <string name="upload_completato">Upload completed</string>
    <string name="what_to_do">What do you want to do?</string>
    <string name="menu_syntax_highlight">Syntax highlight</string>
    <string name="testo_indietro">Undo</string>
    <string name="testo_rifai">Redo</string>
    <string name="sync">Sync</string>
    <string name="remote_folder_to_sync">Remote folder to sync</string>
    <string name="local_folder_to_sync">Local folder to sync</string>
    <string name="vota">Rate</string>
    <string name="inapp_unavailable">Cannot contact Google Play</string>
    <string name="inapp_description">Support the development of other great features.</string>
    <string name="upgrade_premium">Upgrade to Premium</string>
    <string name="upgrade_premium_summary">Upgrade to Premium and support the development of Turbo Client!</string>
    <string name="download_unlocked_version">Download unlocked version</string>
    <string name="inapp_second_description">What is Turbo Client worth to you? Set your price! </string>
    <string name="inapp_first_description">Upgrade to unlock this features:</string>
    <string name="inapp_item_openandeditfiles">Power to open and modify any type of file.</string>
    <string name="inapp_item_backup_service">Backup service to backup and restore your data safely. </string>
    <string name="inapp_unlock_features">Unlock the Premium features</string>
    <string name="inapp_seconditem_description">I really like this app!</string>
    <string name="inapp_thirditem_description">I love this app!</string>
    <string name="backup_accounts">Backup the accounts</string>
    <string name="restore_accounts">Restore the accounts</string>
    <string name="share_accounts">Backup and share the accounts</string>
    <string name="importing_accounts">Importing the accounts&#8230;</string>
    <string name="exporting_accounts">Exporting the accounts...</string>
    <string name="backup_not_found">No backups found</string>
    <string name="err_cant_open_the_file">Cannot open the file</string>
    <string name="err_temp_folder_doesnt_exist">Temporary folder does not exist</string>
    <string name="err_occured">An error occurred</string>
    <string name="ui_ux">UI</string>
    <string name="remove">Remove</string>
    <string name="modification_date">Modification date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="sort">Sort</string>
    <string name="open">Open</string>
    <string name="file_modified">The file %1$s was modified, do you want to upload it?</string>
    <string name="file_saved_with_success">The file %1$s was saved with success!</string>
    <string name="create_new_account">Create a new account</string>
    <string name="create_new_account_to_start">Create a new account to start.</string>
    <string name="type">Type</string>
    <string name="send_feedback">Send feedback</string>
    <string name="copy_url">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="paste">paste</string>
    <string name="advanced">Advanced</string>
    <string name="auto">Auto</string>
    <string name="bytes">Bytes</string>
    <string name="unit_measurement_for_file_size">Unit of measurement for file size</string>
    <string name="open_source_license">Open Source licenses</string>
    <string name="open_source_license_summary">Show open source licenses</string>
    <string name="open_a_file">Open a file</string>
    <string name="open_this_time_only">Open this time only</string>
    <string name="change_list_type">Change the list type</string>
    <string name="use_monospace">Use monospace</string>
    <string name="recent_files">Recent files</string>
    <string name="font_size">Font size</string>
    <string name="connection_name">Connection Name</string>
    <string name="line_numbers">Line Numbers</string>
    <string name="wrap_content">Wrap content</string>
    <string name="view_it_on_the_web">View it on the web</string>
    <string name="add">Add</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="light_theme">Light Theme</string>
    <string name="goto_line">Go to Line</string>
    <string name="find">Find</string>
    <string name="replace">Replace</string>
    <string name="root_permission">Root Permission</string>
    <string name="share">Share</string>
    <string name="keyboard_suggestions_and_swipe">Keyboard suggestions and Swipe</string>
    <string name="enable_autoencoding">Auto-Encoding</string>
    <string name="set_as_working_folder">Set as the working folder</string>
    <string name="is_the_working_folder">This is the working folder</string>
    <string name="save_changes">Do you want to save the changes to the file %s?</string>
    <string name="regular_expression">Regular Expression</string>
    <string name="text_to_find">Text to find</string>
    <string name="text_to_replace">Text to replace</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_wait">Please wait…</string>
    <string name="occurrences_found">%s occurrences was found</string>
    <string name="app_version">Version %s</string>
    <string name="translate_the_app">Translate</string>
    <string name="changelog">Changelog</string>
    <string name="match_case">Match case</string>
    <string name="long_click_for_more_options">Long click for more options</string>
    <string name="pro_version">Pro version</string>
    <string name="auto_save">Auto save</string>
    <string name="read_only">Read only</string>
    <string name="send_error_reports">Send error reports</string>
    <string name="extra_options">Extra options</string>
    <string name="split_text_if_too_long">Split the text if too long</string>
    <string name="ignore_back_button">Ignore back button</string>
</resources>
