<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Vlad Mihalachi
  ~
  ~ This file is part of Turbo Editor.
  ~
  ~ Turbo Editor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Turbo Editor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/im_select_folder"
        app:showAsAction="ifRoom"
        android:title="@string/seleziona">
    </item>
<item
    android:id="@id/im_set_as_working_folder"
    app:showAsAction="ifRoom"
    android:icon="@drawable/ic_action_bookmark_outline"
    android:title="@string/set_as_working_folder">
</item>
<item
    android:id="@id/im_is_working_folder"
    app:showAsAction="ifRoom"
    android:icon="@drawable/ic_action_bookmark"
    android:title="@string/is_the_working_folder">
</item>
<item
    android:id="@id/im_search"
    app:actionViewClass="android.support.v7.widget.SearchView"
    app:showAsAction="ifRoom|collapseActionView"
    android:icon="@drawable/ic_action_search"
    android:title="@string/find">
</item>
</menu>
